workshop4/fortuneapp/fortune-gw.yaml
apiVersion: networking.istio.io/v1alpha3 

kind: Gateway

metadata:
  name: fortune-ingress
spec: 
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "fortune.157.230.194.98.nip.io"
    - "weather.157.230.194.98.nip.io"
    port:
      number: 80
      protocol: HTTP
      name: HTTP

# 157.230.194.98
# fortuneapp-svc   ClusterIP   10.245.228.81   <none>        80/TCP    113m
# Gateway -> VirtualService -> Destination Rule
# http://fortune.157.230.194.98.nip.io/v1
